# BCI-dockerfile-generator

./: .buildinfo  .dockerignore  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.j2  README.md  README.rst  _config  _service  adding_containers.html  api.html  bci-dockerfile-generator.py  creating_packages.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  scratch-build-bot.py  search.html  searchindex.js  staging_bot.html  update-files.sh
.github/: create-package.md  dependabot.yml
.obs/: workflows.yml
389-ds-container/: 389-ds-container.changes  Dockerfile  README.md  _service
389-ds-image/: 389-ds-image.changes  Dockerfile  README.md
_sources/: adding_containers.rst.txt  creating_packages.rst.txt  index.rst.txt  staging_bot.rst.txt
alertmanager-image/: Dockerfile  README.md  _service  alertmanager-image.changes
amd-driver-image/: Dockerfile  Dockerfile.30.20.1  Dockerfile.30.30.3  Dockerfile.30.30.4  Dockerfile.31.10  Dockerfile.31.20  Dockerfile.31.30  README.30.20.1.md  README.30.30.3.md  README.30.30.4.md  README.31.10.md  README.31.20.md  README.31.30.md  README.md  _multibuild  amd-driver-image.changes  radeon-30.20.1-x86_64.repo  radeon-30.30.3-x86_64.repo  radeon-30.30.4-x86_64.repo  radeon-31.10-x86_64.repo  radeon-31.20-x86_64.repo  radeon-31.30-x86_64.repo  radeon-sles15sp7-x86_64.repo
amd-gpu-7.0.3/: Dockerfile  README.md  _service  amd-gpu-7.0.3.changes  third-party.gpg.key  third-party.repo
apache-tomcat-10-image/: Dockerfile  Dockerfile.openjdk17  Dockerfile.openjdk21  Dockerfile.openjdk22  Dockerfile.openjdk23  Dockerfile.openjdk24  Dockerfile.openjdk25  README.md  _multibuild  _service  apache-tomcat-10-image.changes  apache-tomcat-image.changes
apache-tomcat-10-java-17-image/: Dockerfile  README.md  apache-tomcat-10-java-17-image.changes
apache-tomcat-10-java-21-image/: Dockerfile  README.md  apache-tomcat-10-java-21-image.changes
apache-tomcat-10-java-22-image/: Dockerfile  README.md  apache-tomcat-10-java-22-image.changes
apache-tomcat-11-image/: Dockerfile.openjdk21  Dockerfile.openjdk25  apache-tomcat-11-image.changes
apache-tomcat-9-image/: Dockerfile  Dockerfile.openjdk17  Dockerfile.openjdk21  README.md  _service  apache-tomcat-9-image.changes
apache-tomcat-9-java-17-image/: Dockerfile  README.md  apache-tomcat-9-java-17-image.changes
apache-tomcat-image/: Dockerfile.openjdk17  _service  apache-tomcat-image.changes
aspnet-runtime-10.0/: Dockerfile  README.md  aspnet-runtime-10.0.changes
aspnet-runtime-3.1/: Dockerfile  README.md  aspnet-runtime-3.1.changes
aspnet-runtime-6.0/: Dockerfile  README.md  aspnet-runtime-6.0.changes  dotnet-host.check
aspnet-runtime-7.0/: Dockerfile  README.md  aspnet-runtime-7.0.changes
aspnet-runtime-8.0/: Dockerfile  README.md  aspnet-runtime-8.0.changes  dotnet-host.check  third-party.repo
aspnet-runtime-9.0/: Dockerfile  README.md  aspnet-runtime-9.0.changes
basalt-kernel-module-devel/: Dockerfile  basalt-kernel-module-devel.changes
basalt-kernel-module-devel-image/: Dockerfile  README.md  basalt-kernel-module-devel-image.changes
basalt-kernel-module-toolkit/: Dockerfile  basalt-kernel-module-toolkit.changes
base-fips-image/: Dockerfile  README.md  _service  base-fips-image.changes
base-image/: README.md  base-image.changes  base-image.kiwi  config.sh
bci-ci-image/: Dockerfile  bci-ci-image.changes
bind-image/: Dockerfile  README.md  bind-image.changes
blackbox_exporter-image/: Dockerfile  README.md  _service  blackbox_exporter-image.changes
bugzilla-mcp-image/: Dockerfile  README.md  bugzilla-mcp-image.changes
busybox-image/: Dockerfile  README.md  _service  busybox-image.changes  busybox-image.kiwi  config.sh  images.sh
cdi-1.65-image/: Dockerfile.apiserver  Dockerfile.cloner  Dockerfile.controller  Dockerfile.importer  Dockerfile.operator  Dockerfile.uploadproxy  Dockerfile.uploadserver  README.apiserver.md  README.cloner.md  README.importer.md  (+5 more)
(+1058 files in other folders)
