[tool.poetry]
name = "bci-dockerfile-generator"
version = "0.1.0"
description = "Generator script for the Dockerfiles for the SLE BCI"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "bci_build", from = "src" },
    { include = "staging", from = "src" },
    { include = "dotnet", from = "src" },
    { include = "php", from = "src" },
]
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Jinja2 = "^3.1"
aiohttp = "^3.8"
rpm-vercmp = "^0.1"
aiofiles = "^22.1"
obs-package-update = { git = "https://github.com/dcermak/obs-package-update", branch = "main" }
GitPython = "^3.1"
python-gnupg = "^0.5.0"

[tool.poetry.dev-dependencies]
black = ">=22.6"
Sphinx = ">=4.4"
pytest = ">=7.1"
types-aiofiles = ">=22.1"
reorder-python-imports = ">=3.8"
pytest-asyncio = ">=0.20"
pyyaml = ">=6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
