[tool.poetry]
name = "bci-dockerfile-generator"
version = "0.1.0"
description = "Generator script for the Dockerfiles for the SLE BCI"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "GPL-3.0-or-later"
packages = [
    { include = "bci_build", from = "src" },
    { include = "staging", from = "src" },
    { include = "dotnet", from = "src" },
]
[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = ">=3.1"
aiohttp = ">=3.9.0"
rpm-vercmp = ">=0.1"
aiofiles = ">=22.1"
obs-package-update = { git = "https://github.com/dcermak/obs-package-update", branch = "main" }
py-obs = { git = "https://github.com/dcermak/py-obs", branch = "main" }
GitPython = ">=3.1"

[tool.poetry.scripts]
package = "bci_build.package:main"
regcheck = "bci_build.regcheck:main"
scratch-build-bot = "staging.bot:main"
update-versions = "bci_build.package.versions:run_version_update"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.14"
Sphinx = ">=4.4"
pytest = ">=7.1"
types-aiofiles = ">=22.1"
pytest-asyncio = ">=0.20, != 0.22.0"
pyyaml = ">=6.0"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]
ignore = [
    # too long lines…
    "E501"
]

[tool.ruff]
src = ["src", "tests", "source"]

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
