[project]
name = "bci-dockerfile-generator"
version = "0.1.0"
description = "Generator script for the Dockerfiles for the SLE BCI"
authors = [
    { name = "Dan Čermák", email = "dcermak@suse.com" },
    { name = "Dirk Müller", email = "dmueller@suse.com" },
]
license = "GPL-3.0-or-later"
packages = [
    { include = "bci_dockerfile_generator", from = "src" },
    { include = "bci_build", from = "src" },
    { include = "staging", from = "src" },
    { include = "dotnet", from = "src" },
]
requires-python = ">=3.11,<4.0"

dependencies = [
    "Jinja2 >=3.1",
    "aiohttp >=3.9.0",
    "aiofiles >=22.1",
    "obs-package-update @git+https://github.com/dcermak/obs-package-update@main",
    "py-obs @git+https://github.com/dcermak/py-obs@main",
    "GitPython >=3.1",
    "oras >=0.2.2",
]

[tool.poetry.scripts]
package = "bci_build.package:main"
scratch-build-bot = "staging.bot:main"
update-versions = "bci_build.package.versions:run_version_update"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.0"
Sphinx = ">=4.4"
pytest = ">=7.1"
types-aiofiles = ">=22.1"
pytest-asyncio = ">=0.20, != 0.22.0"
pyyaml = ">=6.0"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]
ignore = [
    # too long lines…
    "E501"
]

[tool.ruff]
src = ["src", "tests", "source"]

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
